--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@remix-run/vercel": "^1.7.5",
 		"@vercel/node": "^2.4.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"remix-auth": "^3.3.0",
+		"remix-auth-socials": "^1.0.2"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.7.5",
