--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@remix-run/dev": "^1.7.5",
 		"@remix-run/eslint-config": "^1.7.5",
 		"@remix-run/serve": "^1.7.5",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
 		"autoprefixer": "^10.4.13",
